--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -6,10 +6,11 @@ Vagrant.configure("2") do |config|
   config.vagrant.plugins = ["vagrant-vbguest"]
   config.vm.box = "centos/7"
   config.vm.box_check_update = true
-  config.vm.synced_folder ".", "/vagrant", type: "virtualbox"
+  config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vbguest.auto_update = true
 
   config.vm.define "node1", primary: true do |machine|
+    machine.vm.synced_folder "./backend_app", "/opt/{{ cookiecutter.project_slug }}", type: "virtualbox"
     machine.vm.network "private_network", ip: "172.17.177.21"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_node1"
@@ -17,11 +18,13 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "controller" do |machine|
+    machine.vm.synced_folder ".", "/vagrant", type: "virtualbox"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_controller"
       virtualbox.memory = 512
     end
     machine.vm.provision "ansible_local" do |ansible|
+      ansible.compatibility_mode = "2.0"
       ansible.playbook = "playbook.yml"
       ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
