--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -1,3 +1,5 @@
 ---
 
 backend_app_dir: "/opt/{{ cookiecutter.project_slug }}"
+backend_app_user: "{{ cookiecutter.backend_user }}"
+backend_app_group: "{{ cookiecutter.backend_group }}"
