--- a/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
@@ -3,4 +3,5 @@ host_key_checking = no
 roles_path = galaxy_roles:roles
 
 [ssh_connection]
+pipelining = True
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
