Add backend requirements.txt. Install backend requirements using pip-sync.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/users.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/users.yml
@@ -4,9 +4,11 @@
   group:
     name: "{{ backend_app_group }}"
     system: yes
+    gid: "{{ backend_app_gid | default(omit) }}"
 
 - name: create the backend app user
   user:
     name: "{{ backend_app_user }}"
     group: "{{ backend_app_group }}"
+    uid: "{{ backend_app_uid | default(omit) }}"
 {% endraw %}
