--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -10,7 +10,12 @@ Vagrant.configure("2") do |config|
   config.vbguest.auto_update = true
 
   config.vm.define "node1", primary: true do |machine|
-    machine.vm.synced_folder "./backend_app", "/opt/{{ cookiecutter.project_slug }}", type: "virtualbox"
+    machine.vm.synced_folder(
+      "./backend_app",
+      "/opt/{{ cookiecutter.project_slug }}",
+      type: "virtualbox",
+      mount_options: ["uid=1234", "gid=1234"]
+    )
     machine.vm.network "private_network", ip: "172.17.177.21"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_node1"
