--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -4,3 +4,5 @@ backend_app_dir: "/opt/{{ cookiecutter.project_slug }}"
 backend_app_user: "{{ cookiecutter.backend_user }}"
 backend_app_group: "{{ cookiecutter.backend_group }}"
 backend_app_virtualenv_dir: "/home/{{ cookiecutter.backend_user }}/{{ cookiecutter.project_slug }}_virtualenv"
+backend_app_systemd_pid: "/run/{{ cookiecutter.project_slug }}.pid"
+backend_app_wsgi: "{{ cookiecutter.project_slug }}.wsgi"
