--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -9,8 +9,10 @@
     src: "{{ playbook_dir }}/../backend_app/"
     dest: "{{ backend_app_dir }}"
     delete: yes
+    rsync_opts:
+      - "--exclude=__pycache__"
+      - "--delete-excluded"
   when: backend_app_rsync
 
 - include_tasks: systemd.yml
-
 {% endraw %}
