--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 
 backend_app_dir: "/opt/{{ cookiecutter.project_slug }}"
+backend_app_settings_file: "{% raw %}{{ backend_app_dir }}{% endraw %}/{{ cookiecutter.project_slug }}/settings.env"
 backend_app_user: "{{ cookiecutter.project_slug }}"
 backend_app_group: "{{ cookiecutter.project_slug }}"
 backend_app_virtualenv_dir: "/home/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}_virtualenv"
