--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: template settings
   template:
     src: settings.env.j2
-    dest: "{{ backend_app_settings_file }}"
+    dest: "{{ backend_app_dir }}/settings.env"
     owner: "{{ backend_app_user }}"
     group: "{{ backend_app_group }}"
     mode: "u=rw,g=,o="
