--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -6,3 +6,4 @@ backend_app_gid: 1234
 backend_app_uid: 1234
 backend_app_debug: true
 backend_app_database_host: "127.0.0.1"
+backend_app_secret_key: "$DJANGO SECRET KEY$"
