Update ansible callback whitelist.

--- a/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
@@ -1,6 +1,7 @@
 [defaults]
 host_key_checking = no
 roles_path = galaxy_roles:roles
+callback_whitelist = timer, profile_roles
 
 [ssh_connection]
 pipelining = True
