--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "node1", primary: true do |machine|
     machine.vm.synced_folder(
       "./backend_app",
-      "/opt/{{ cookiecutter.project_slug }}",
+      "/opt/{{ cookiecutter.project_slug }}_backend",
       type: "virtualbox",
       mount_options: ["uid=1234", "gid=1234"]
     )
