--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -22,5 +22,7 @@
     group: "{{ backend_app_group }}"
     mode: "u=rw,g=,o="
 
+- include_tasks: django_management.yml
+
 - include_tasks: systemd.yml
 {% endraw %}
