Start and enable the backend app systemd unit.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
@@ -11,4 +11,12 @@
   template:
     src: systemd_service.j2
     dest: "/etc/systemd/system/{{ backend_app_systemd_unit_name }}.service"
+
+- name: start and enable the systemd unit
+  systemd:
+    daemon_reload: yes
+    name: "{{ backend_app_systemd_unit_name }}"
+    enabled: yes
+    state: started
+
 {% endraw %}
