--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/selinux.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/selinux.yml
@@ -9,3 +9,8 @@
   selinux:
     policy: targeted
     state: enforcing
+
+- name: install libsemanage-python
+  yum:
+    name: libsemanage-python
+    state: present
