--- a/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
@@ -3,5 +3,5 @@
 - src: geerlingguy.postgresql
   version: "1.4.6"
 
-- src: nginxinc.nginx
-  version: "0.12.0"
+- src: geerlingguy.nginx
+  version: "2.7.0"
