--- a/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
@@ -1,5 +1,6 @@
 ---
 
+systemd_backend_runtime_dir: "{{ cookiecutter.project_slug }}"
 database_name: "{{ cookiecutter.project_slug }}"
 database_user: "{{ cookiecutter.project_slug }}"
 static_dir: "/usr/share/nginx/html/static"
