--- a/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
@@ -3,4 +3,4 @@
 systemd_backend_runtime_dir: "{{ cookiecutter.project_slug }}"
 database_name: "{{ cookiecutter.project_slug }}"
 database_user: "{{ cookiecutter.project_slug }}"
-static_dir: "/usr/share/nginx/html/static"
+static_root: "/usr/share/nginx/backend_app_static"
