--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend_app.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend_app.yml
@@ -3,6 +3,6 @@
 backend_app_database_name: "{{ database_name }}"
 backend_app_database_user: "{{ database_user }}"
 backend_app_database_password: "{{ database_password }}"
-backend_app_static_dir: "{{ static_dir }}"
+backend_app_static_root: "{{ static_root }}"
 backend_app_systemd_runtime_dir: "{{ systemd_backend_runtime_dir }}"
 {% endraw %}
