Pass 'noinput' to django management commands.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
@@ -4,7 +4,7 @@
   become: yes
   become_user: "{{ backend_app_user }}"
   django_manage:
-    command: migrate
+    command: "migrate --noinput"
     app_path: "{{ backend_app_dir }}"
     virtualenv: "{{ backend_app_virtualenv_dir }}"
 
@@ -12,7 +12,7 @@
   become: yes
   become_user: "{{ backend_app_user }}"
   django_manage:
-    command: "collectstatic --clear"
+    command: "collectstatic --clear --noinput"
     app_path: "{{ backend_app_dir }}"
     virtualenv: "{{ backend_app_virtualenv_dir }}"
 
