Run database migrations on one host only.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
@@ -3,6 +3,7 @@
 - name: run database migrations
   become: yes
   become_user: "{{ backend_app_user }}"
+  run_once: yes
   django_manage:
     command: "migrate --noinput"
     app_path: "{{ backend_app_dir }}"
