--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -11,4 +11,5 @@ backend_app_allowed_hosts:
   - "localhost"
   - "127.0.0.1"
   - "{{ inventory_hostname }}"
+  - "api.{{ inventory_hostname }}"
 {% endraw %}
