--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
@@ -2,13 +2,13 @@
 
 all:
   hosts:
-    node1:
+    {{ cookiecutter.dev_vm_hostname }}:
       ansible_ssh_host: "172.17.177.21"
-      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/node1/virtualbox/private_key"
+      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/{{ cookiecutter.project_slug }}_dev/virtualbox/private_key"
   children:
     database:
       hosts:
-        node1:
+        {{ cookiecutter.dev_vm_hostname }}:
     backend:
       hosts:
-        node1:
+        {{ cookiecutter.dev_vm_hostname }}:
