--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/systemd.yml
@@ -1,22 +1,15 @@
 ---
 {% raw %}
-- name: add gunicorn config
-  template:
-    src: gunicorn.cfg.j2
-    dest: "{{ backend_app_dir }}/gunicorn.cfg"
-    owner: "{{ backend_app_user }}"
-    group: "{{ backend_app_group }}"
 
 - name: add systemd unit file
   template:
     src: systemd_service.j2
     dest: "/etc/systemd/system/{{ backend_app_systemd_unit_name }}.service"
 
-- name: start and enable the systemd unit
+- name: enable and restart the systemd unit
   systemd:
     daemon_reload: yes
     name: "{{ backend_app_systemd_unit_name }}"
     enabled: yes
-    state: started
-
+    state: restarted
 {% endraw %}
