--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 
-backend_app_dir: "/opt/{{ cookiecutter.project_slug }}_backend"
+backend_app_root: "/opt/{{ cookiecutter.project_slug }}_backend"
+{%raw %}backend_app_current_release: "{{ backend_app_root }}/current"{% endraw %}
 backend_app_user: "{{ cookiecutter.project_slug }}"
 backend_app_group: "{{ cookiecutter.project_slug }}"
 backend_app_virtualenv_dir: "/home/{{ cookiecutter.project_slug }}/virtualenv"
