Use the 'deploy_helper.current_path' var in the backend_app role.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -36,6 +36,7 @@
     path: "{{ backend_app_root }}"
     release: '{{ deploy_helper.new_release }}'
     state: finalize
+    clean: yes
     keep_releases: 10
   when: backend_app_run_deploy | bool
 
