--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
@@ -6,15 +6,15 @@
   run_once: yes
   django_manage:
     command: "migrate --noinput"
-    app_path: "{{ backend_app_current_release }}"
-    virtualenv: "{{ backend_app_virtualenv_dir }}"
+    app_path: "{{ deploy_helper.current_path }}"
+    virtualenv: "{{ deploy_helper.current_path }}/venv"
 
 - name: run collect static files
   become: yes
   become_user: "{{ backend_app_user }}"
   django_manage:
     command: "collectstatic --clear --noinput"
-    app_path: "{{ backend_app_current_release }}"
-    virtualenv: "{{ backend_app_virtualenv_dir }}"
+    app_path: "{{ deploy_helper.current_path }}"
+    virtualenv: "{{ deploy_helper.current_path }}/venv"
 
 {% endraw %}
