Update backend_app role to work correctly with a vagrant synced folder.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -1,6 +1,6 @@
 ---
 {% raw %}
-backend_app_run_deploy: yes
+backend_app_vagrant_mount: yes
 backend_app_gunicorn_worker_count: 4
 backend_app_gid: 1234
 backend_app_uid: 1234
