--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -18,12 +18,12 @@ Vagrant.configure("2") do |config|
   config.vm.define "{{ cookiecutter.project_slug }}_dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.dev_vm_hostname }}"
     machine.hostmanager.aliases = ["api.{{ cookiecutter.dev_vm_hostname }}",]
-    # machine.vm.synced_folder(
-    #   "./backend_app",
-    #   "/opt/{{ cookiecutter.project_slug }}_backend",
-    #   type: "virtualbox",
-    #   mount_options: ["uid=1234", "gid=1234"]
-    # )
+    machine.vm.synced_folder(
+      "./backend_app",
+      "/opt/{{ cookiecutter.project_slug }}_backend/current",
+      type: "virtualbox",
+      mount_options: ["uid=1234", "gid=1234"]
+    )
     machine.vm.network "private_network", ip: "172.17.177.21"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
