--- a/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
@@ -1,5 +1,9 @@
 ---
 {% raw %}
+postgresql_global_config_options:
+  - option: listen_addresses
+    value: '*'
+
 postgresql_databases:
   - name: "{{ database_name }}"
 
