--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -9,13 +9,13 @@ Vagrant.configure("2") do |config|
   ]
   config.vm.box = "centos/7"
   config.vm.box_check_update = true
-  config.vm.synced_folder ".", "/vagrant", disabled: true
+  config.vm.synced_folder ".", "/vagrant", type: "virtualbox"
   config.vbguest.auto_update = true
   config.hostmanager.enabled = true
   config.hostmanager.manage_host = true
-  config.hostmanager.manage_guest = false
+  config.hostmanager.manage_guest = true
 
-  config.vm.define "{{ cookiecutter.project_slug }}_dev", primary: true do |machine|
+  config.vm.define "dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.dev_vm_hostname }}"
     machine.hostmanager.aliases = ["api.{{ cookiecutter.dev_vm_hostname }}",]
     machine.vm.synced_folder(
@@ -31,7 +31,16 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  # We spin up a second VM and execute ansible using the ansible_local vagrant
+  config.vm.define "db" do |machine|
+    machine.vm.hostname = "{{ cookiecutter.db_vm_hostname }}"
+    machine.vm.network "private_network", ip: "172.17.177.22"
+    machine.vm.provider "virtualbox" do |virtualbox|
+      virtualbox.name = "{{ cookiecutter.project_slug }}_db"
+      virtualbox.memory = 512
+    end
+  end
+
+  # We spin up another VM and execute ansible using the ansible_local vagrant
   # provisioner, as opposed to executing ansible directly from the host
   # machine.
   #
@@ -44,7 +53,6 @@ Vagrant.configure("2") do |config|
   # However, this process does result in the creation of a 'controller' VM,
   # which increases the system resources used for this dev environment.
   config.vm.define "controller" do |machine|
-    machine.vm.synced_folder ".", "/vagrant", type: "virtualbox"
     machine.vm.network "private_network", ip: "172.17.177.20"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_controller"
