--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/database/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/database/vars.yml
@@ -1,10 +1,7 @@
 ---
 
-postgresql_global_config_options:
-  - option: listen_addresses
-    value: 'localhost'
-
 postgresql_hba_entries:
   - { type: local, database: all, user: postgres, auth_method: peer }
   - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
   - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
+  - { type: host, database: all, user: all, address: '172.17.177.21/32', auth_method: md5 }
