--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
@@ -2,13 +2,17 @@
 
 all:
   hosts:
+    # The /etc/hosts file in the 'controller' VM is automatically updated with entries
+    # for the hosts in this environment via the "vagrant-hostmanager" plugin. So, we
+    # only need to configure the appropriate ssh key for each host.
     {{ cookiecutter.dev_vm_hostname }}:
-      ansible_ssh_host: "172.17.177.21"
-      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/{{ cookiecutter.project_slug }}_dev/virtualbox/private_key"
+      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/dev/virtualbox/private_key"
+    {{ cookiecutter.db_vm_hostname }}:
+      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/db/virtualbox/private_key"
   children:
-    database:
-      hosts:
-        {{ cookiecutter.dev_vm_hostname }}:
     backend:
       hosts:
         {{ cookiecutter.dev_vm_hostname }}:
+    database:
+      hosts:
+        {{ cookiecutter.db_vm_hostname }}:
